[package]
name = "puppy_find"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
mime_guess = "2.0"
omni_search = "0.1.1"
rusqlite = { version = "0.37", features = ["bundled"] }
rust-embed = "8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.48", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
webbrowser = "1.0"
