[package]
name = "puppy_find"
version = "0.0.6"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
mime_guess = "2.0"
omni_search = "0.2.3"
rfd = "0.17"
rusqlite = { version = "0.39", features = ["bundled"] }
rust-embed = "8.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.52", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
webbrowser = "1.2"
